--- a/css/template.css
+++ b/css/template.css
@@ -5,7 +5,6 @@
     --section-padding: 100px;
 }
 /* End Varibales */
-
 /* Start Global Ruls */
 html{scroll-behavior: smooth;}
 *{
@@ -15,10 +14,7 @@ html{scroll-behavior: smooth;}
     padding: 0;
     margin: 0;
 }
-
-
 body{font-family: 'Open Sans', sans-serif;}
-
 ul{list-style: none;}
 .container{
     padding-left: 15px;
@@ -26,30 +22,21 @@ ul{list-style: none;}
     margin-left: auto;
     margin-right: auto;
 }
-
 /* Small */
 @media (min-width: 768px){
-    .container{
-        width: 750px;
-    }
+    .container{width: 750px;}
 }
 /* Medium */
 @media (min-width: 992px){
-    .container{
-        width: 970px;
-    }
+    .container{width: 970px;}
 }
 /* Large */
 @media (min-width: 1200px){
-    .container{
-        width: 1170px;
-    }
+    .container{width: 1170px;}
 }
 /************************** End Global Ruls ****************/
 .section{padding: 50px;}
-
 .main-heading{text-align: center;padding-top: var(--section-padding);padding-bottom: var(--section-padding);}
-
 .main-heading h2{
     font-size: 40px;
     font-weight: normal;
@@ -87,9 +74,7 @@ ul{list-style: none;}
     color: #777;
 }
 /************************* Start Components ****************/
-
 /************************* End Components ******************/
-
 /*************************** Start Header **********************/
 header{
     position: absolute;
@@ -104,9 +89,7 @@ header .container{
     position: relative;
     
 }
-@media (max-width: 767px){
-    header .container{max-height: 97px;}
-}
+@media (max-width: 767px){header .container{max-height: 97px;}}
 header .container::after{
     content: '';
     position: absolute;
@@ -117,7 +100,6 @@ header .container::after{
     left: 15px;
 }
 header .Logo img {height: 40px;}
-
 header nav {
     flex: 1;
     display: flex;
@@ -126,15 +108,8 @@ header nav {
 }
 header nav i{transition: 0.3s;}
 header nav i:hover{cursor: pointer;transform: rotate(360deg) scale(1.5);}
-header nav .toggle-menu{
-    color: white;
-    font-size: 20px;
-}
-@media (min-width: 768px){
-    header nav .toggle-menu{
-        display: none;
-    }
-}
+header nav .toggle-menu{color: white;font-size: 20px;}
+@media (min-width: 768px){header nav .toggle-menu{display: none;}}
 header nav .toggle-menu:hover + ul{
     display: flex;
     flex-direction: column;
@@ -144,16 +119,10 @@ header nav .toggle-menu:hover + ul{
     width: 100%;
     background-color: rgb(0 0 0 / 50%);
 }
-header nav ul li a{
-    padding: 15px !important;
-}
-header nav ul {
-    display: flex;
-}
+header nav ul li a{padding: 15px !important;}
+header nav ul {display: flex;}
 @media (max-width: 767px){
-    header nav ul{
-        display: none;
-    }
+    header nav ul{display: none;}
 }
 header nav ul li a {
     padding: 40px 10px;
@@ -184,9 +153,6 @@ header nav .form i{
     right: -27px;
 }
 /*************************** End Header ************************/
-
-
-
 /*************************** Start Landing *************************/
 .landing{
     min-height: 100vh;
@@ -216,30 +182,20 @@ header nav .form i{
     display: flex;
     justify-content: flex-end;
 }
-
 .landing .text .content{max-width: 430px;}
-
 @media (max-width: 767px){
-    .landing .text{
-        width: 100%;
-    }
-    .landing .text .content{
-        max-width: 100%;
-    }
+    .landing .text{width: 100%;}
+    .landing .text .content{max-width: 100%;}
 }
-
 .landing i{transition: 0.3s;}
 .landing i:hover{color: #ee82ee7a;}
-
 .landing .text .content h2{
     font-size: 30px;
     font-weight: normal;
     line-height: 1.5;
     margin-bottom: 15px;
 }
-
 .landing .text .content p{font-size: 14px;line-height: 2;}
-
 .landing .change-background{
     position: absolute;
     top: 50%;
@@ -247,18 +203,12 @@ header nav .form i{
     color: #eee;
 }
 @media (max-width: 767px){
-    .landing .change-background{
-        display: none;
-    }
+    .landing .change-background{display: none;}
 }
 .landing .fa-angle-left{left: 30px;}
-
 .landing .fa-angle-left:hover{cursor: pointer;}
-
 .landing .fa-angle-right{right: 30px;}
-
 .landing .fa-angle-right:hover{cursor: pointer;}
-
 .landing .bullets{
     position: absolute;
     left: 50%;
@@ -266,14 +216,14 @@ header nav .form i{
     bottom: 30px;
     display: flex;
 }
-.landing .bullets li{
+.landing .bullets span li{
     width: 20px;
     height: 20px;
     border: 1px solid white;
     border-radius: 50%;
     margin-right: 10px;
     transition: 0.3s;
-}.landing .bullets li:hover{
+}.landing .bullets span li:hover{
     background-color: var(--main-color);
     border-color: var(--main-color);
 }
@@ -290,9 +240,6 @@ header nav .form i{
 }
 .landing .bullets li:hover{cursor: pointer;}
 /************************** End Landing ****************************/
-
-
-
 /************************** Start Services *************************/
 .services{
     padding-top: var(--section-padding);
@@ -306,9 +253,7 @@ header nav .form i{
         grid-row-gap: 60px;
     }
 }
-.services .srv-box{
-    display: flex;
-}
+.services .srv-box{display: flex;}
 @media (max-width: 767px){
     .services .srv-box{
         display: flex;
@@ -316,12 +261,9 @@ header nav .form i{
         text-align: center;
         margin-bottom: 40px;
     }
-    .services .srv-box i{
-        margin-bottom: 0 0 30px;
-    }
+    .services .srv-box i{margin-bottom: 0 0 30px;}
 }
 .services .srv-box i{margin-right: 50px;}
-
 .services .srv-box h3{
     margin-bottom: 30px;
     color: var(--min-color);
@@ -329,12 +271,8 @@ header nav .form i{
     transition: 0.3s;
 }
 .services .srv-box h3:hover{color: blue;}
-
 .services .srv-box p{line-height: 2;color: #777;}
 /************************** End Services ***************************/
-
-
-
 /**************************** Start Diesing ************************/
 .diesing{
     position: relative;
@@ -358,22 +296,14 @@ header nav .form i{
 }
 .diesing .image,
 .diesing .text{position: relative;z-index: 2;flex: 1;}
-
 .diesing .image{text-align: center;}
-
 @media (max-width: 767px){
-    .diesing .image{
-        display: none;
-    }
+    .diesing .image{display: none;}
 }
 .diesing .image img{position: relative;bottom: -239px;width: 270px;}
-
 .diesing .text{color: white;padding: 50px;background-color: #ee82ee7a;}
-
 .diesing .text h2{font-weight: normal;text-transform: uppercase;margin-bottom: 30px;}
-
 .diesing .text ul li{padding:10px 0;cursor: pointer;transition: 0.3s;}
-
 .diesing .text ul li:hover{color: blue;}
 .diesing .text ul li::before{
     font-family: "Font Awesome 5 Free";
@@ -383,21 +313,14 @@ header nav .form i{
     position: relative;
     top: 1px;
 }
-
 /**************************** End Diesing ***************************/
-
-
-
-
 /************************** Start Portfolio ***********************/
 .portfolio{
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
 }
 .portfolio .shuffle{display: flex;justify-content: center;}
-
 .portfolio .shuffle li{transition: 0.3s;padding: 10px;}
-
 .portfolio .shuffle li.active{
     background-color: #ee82ee7a;
     color: white;
@@ -410,23 +333,16 @@ header nav .form i{
     cursor: pointer;
 }
 .portfolio .images{display: flex;flex-wrap: wrap;margin-top: 60px;}
-
 .portfolio .images .box{overflow: hidden;position: relative;}
-
 .portfolio .images .box:hover .caption{bottom: 0;}
-
 .portfolio .images .box:hover img{
     transform: rotate(360deg) scale(1.1);
 }
 @media (min-width: 768px){
-    .portfolio .images .box{
-        flex-basis: 50%;
-    }
+    .portfolio .images .box{flex-basis: 50%;}
 }
 @media (min-width: 1199px){
-    .portfolio .images .box{
-        flex-basis: 25%;
-    }
+    .portfolio .images .box{flex-basis: 25%;}
 }
 .portfolio .images .box img{
     transition: 0.3s;
@@ -444,9 +360,7 @@ header nav .form i{
     bottom: -100%;
 }
 .portfolio .images .box .caption h4{font-weight: normal;margin-bottom: 10px;}
-
 .portfolio .images .box .caption p{color: #ee82ee7a;}
-
 .portfolio .more{
     background-color: #ee82ee7a;
     color: white;
@@ -465,14 +379,8 @@ header nav .form i{
     background-color: #d16fd17a;
 }
 /************************* End Portfolio *************************/
-
-
-
-
-
 /*************************** Start Video ************************/
 .video{position: relative;}
-
 .video::before{
     content: "";
     position: absolute;
@@ -483,7 +391,6 @@ header nav .form i{
     background-color: rgb(0 0 0 / 50%);
 }
 .video video{width: 100%;}
-
 .video .text{
     width: 100%;
     position: absolute;
@@ -504,9 +411,7 @@ header nav .form i{
     text-transform: uppercase;
     font-weight: normal;
 }
-.video .text p{
-    margin-bottom: 30px;
-}
+.video .text p{margin-bottom: 30px;}
 .video .text button{
     background-color: black;
     color: white;
@@ -522,10 +427,6 @@ header nav .form i{
     background-color: rgb(39, 29, 29);
 }
 /************************** End Video ***************************/
-
-
-
-
 /************************ Start About *************************/
 .about{
     padding-top: var(--section-padding);
@@ -547,11 +448,6 @@ header nav .form i{
     }
 }
 /************************ End About ****************************/
-
-
-
-
-
 /*************************** Start Stats ***********************/
 .stats{
     padding-top: var(--section-padding);
@@ -612,10 +508,6 @@ header nav .form i{
 
 .stats .container .box p{font-size: 14px;}
 /*************************** End Stats ***********************/
-
-
-
-
 /************************** Start Skills *****************************/
 .our-skills{
     padding-top: var(--section-padding);
@@ -644,7 +536,6 @@ header nav .form i{
     margin-bottom: 60px;
 }
 .our-skills .testimonials .content{display: flex;margin-bottom: 30px;}
-
 .our-skills .testimonials .content img{
     width: 100px;
     height: 100px;
@@ -699,9 +590,7 @@ header nav .form i{
     border-color: #ee82ee7a;
     cursor: pointer;
 }
-
 .our-skills .skills .prog-holder{margin-bottom: 25px;}
-
 .our-skills .skills .prog-holder h4{
     margin-bottom: 15px;
     font-weight: normal;
@@ -739,9 +628,6 @@ header nav .form i{
     top: -15px;
 }
 /************************** End ******************************/
-
-
-
 /************************** Start Quote ********************/
 .quote{
     padding-top: var(--section-padding);
@@ -762,11 +648,8 @@ header nav .form i{
     background-color: rgb(0 0 0 / 75%);
 }
 .quote .container{position: relative;}
-
 .quote q{font-size: 30px;margin-bottom: 20px;display: block;}
-/*************************** End Quote *********************/
-
-
+/*************************** End Quote *********************
 /************************** Start Pricing **********************/
 .pricing{
     padding-top: var(--section-padding);
@@ -796,7 +679,6 @@ header nav .form i{
     margin-bottom: 20px;
 }
 .pricing .plans .plan .head span{font-size: 50px;font-weight: bold;}
-
 .pricing .plans .plan .head span::before{
     content: "$";
     position: relative;
@@ -814,11 +696,8 @@ header nav .form i{
 
 }
 .pricing .plans .plan ul{border-bottom: 1px solid #ee82ee7a;}
-
 .pricing .plans .plan ul li{padding: 20px;position: relative;transition: 0.3s;}
-
 .pricing .plans .plan ul li:hover{background-color: #ee82ee7a;cursor: pointer;}
-
 .pricing .plans .plan ul li:not(:last-child)::after{
     content: "";
     width: 120px;
@@ -840,7 +719,6 @@ header nav .form i{
     border-radius: 4px;
 }
 .pricing .plans .plan .foot a:hover{background-color: #ee82ee7a;color: black;}
-
 .pricing .contact-text{
     text-align: center;
     margin: 50px auto 20px;
@@ -859,11 +737,6 @@ header nav .form i{
 }
 .pricing .contact-link:hover{padding: 15px 40px;color: black;}
 /************************* End Pricing ************************/
-
-
-
-
-
 /************************* Start Subscribe *******************/
 .subscribe{
     padding-top: var(--section-padding);
@@ -922,23 +795,10 @@ header nav .form i{
 } 
 .subscribe form input[type="email"]:focus,
 .subscribe form input[type="submit"]:focus{outline: none;}
-
 .subscribe form ::placeholder{color: white;}
-
 .subscribe p{line-height: 2;margin-left: 50px;}
-
-@media (max-width: 991px){
-    .subscribe p{margin: 30px 0 0;}
-}
+@media (max-width: 991px){.subscribe p{margin: 30px 0 0;}}
 /************************ End Subscribe *********************/
-
-
-
-
-
-
-
-
 /********************************** Start Contact *****************/
 .contact{
     padding-top: var(--section-padding);
@@ -948,14 +808,8 @@ header nav .form i{
     display: flex;
     justify-content: space-between;
 }
-@media (max-width: 767px){
-    .contact .content{
-        flex-direction: column;
-    }
-}
-.contact .content form{
-    flex-basis: 70%;
-}
+@media (max-width: 767px){.contact .content{flex-direction: column;}}
+.contact .content form{flex-basis: 70%;}
 .contact .content form .main-input{
     display: block;
     padding: 20px;
@@ -964,9 +818,7 @@ header nav .form i{
     margin-bottom: 30px;
 }
 .contact .content form .main-input:focus{outline: none;}
-
 .contact .content form textarea.main-input{height: 200px;}
-
 .contact .content form input[type="submit"]{
     background-color: #ee82ee7a;
     color: white;
@@ -983,9 +835,7 @@ header nav .form i{
     padding:20px 30px;
     color: black;
 }
-.contact .content .info{
-    flex-basis: 25%;
-}
+.contact .content .info{flex-basis: 25%;}
 @media (max-width: 767px){
     .contact .content .info{
         order: -1;
@@ -1003,26 +853,18 @@ header nav .form i{
     color: #777;
     margin-bottom: 10px;
 }
-.contact .content .info h4:nth-of-type(2){
-    margin-top: 85px;
-}
+.contact .content .info h4:nth-of-type(2){margin-top: 85px;}
 @media (max-width: 767px){
-    .contact .content .info h4:nth-of-type(2){
-        margin-top: 30px;
-    }
+    .contact .content .info h4:nth-of-type(2){margin-top: 30px;}
 }
 .contact .content .info address{
     color: #777;
     line-height: 2;
 }
 @media (max-width: 767px){
-    .contact .content .info address{
-        margin-bottom: 20px;
-    }
+    .contact .content .info address{margin-bottom: 20px;}
 }
 /********************************** End Contact *******************/
-
-
 /************************************ Start  ******************************/
 .footer{
     padding-top: calc(var(--section-padding) / 2);
@@ -1042,13 +884,8 @@ header nav .form i{
     height: 100%;
     background-color: rgb(0 0 0 / 70%);
 }
-.footer .container{
-    position: relative;
-}
-.footer img{
-    width: 100px;
-    margin-bottom: 20px;
-}
+.footer .container{position: relative;}
+.footer img{width: 100px;margin-bottom: 20px;}
 .footer p:not(.copyright){
     text-transform: uppercase;
     padding: 20px;
@@ -1057,21 +894,15 @@ header nav .form i{
     margin: 20px auto;
     font-size: 22px;
 }
-.footer .social-icons i{
-    padding: 10px 15px;
-    transition: 0.3s;
-}
+.footer .social-icons i{padding: 10px 15px;transition: 0.3s;}
 .footer .social-icons i:hover{
     transform: rotate(360deg) scale(1.1);
     color: blue;
     cursor: pointer;
 }
-.footer .copyright{
-    margin-top: 60px;
-}
+.footer .copyright{margin-top: 60px;}
 .footer .copyright span{
     font-weight: bold;
     color: var(--main-color);
 }
-/* transform: rotate(360deg) scale(1.1); */
 /************************************ End Footer ****************************/
