--- a/css/template.css
+++ b/css/template.css
@@ -107,7 +107,7 @@ header nav {
     justify-content: flex-end;
 }
 header nav i{transition: 0.3s;}
-header nav i:hover{cursor: pointer;transform: rotate(360deg) scale(1.5);}
+header nav i:hover{cursor: pointer;transform: rotate(10deg) scale(0.95);}
 header nav .toggle-menu{color: white;font-size: 20px;}
 @media (min-width: 768px){header nav .toggle-menu{display: none;}}
 header nav .toggle-menu:hover + ul{
@@ -156,19 +156,21 @@ header nav .form i{
 /*************************** Start Landing *************************/
 .up {
     position: fixed;
-    bottom: 10px;
+    bottom: 20px;
     right: -50px;
     background-color: #ff5722;
     color: white;
     font-weight: bold;
     font-size: 20px;
     font-family: Arial, Tahoma;
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
     cursor: pointer;
     z-index: 1000;
+    transition: 0.3s;
+    animation: bouncing 1.5s infinite;
 }
-
+.up:hover{background-color: #6e2c2c;opacity: 0.5;}
 .up.show {
     right: 10px;
 }
@@ -178,6 +180,7 @@ header nav .form i{
     background-image: url("../img/download\ \(9\).jpg");
     background-size: cover;
     position: relative;
+    transition: 1s;
 }
 .landing .overlay{
     position: absolute;
@@ -222,35 +225,6 @@ header nav .form i{
 }
 @media (max-width: 767px){
     .landing .change-background{display: none;}
-}
-.landing .fa-angle-left{left: 30px;}
-.landing .fa-angle-left:hover{cursor: pointer;}
-.landing .fa-angle-right{right: 30px;}
-.landing .fa-angle-right:hover{cursor: pointer;}
-.landing .bullets{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 30px;
-    display: flex;
-}
-.landing .bullets span li{
-    width: 20px;
-    height: 20px;
-    border: 1px solid white;
-    border-radius: 50%;
-    margin-right: 10px;
-    transition: 0.3s;
-}.landing .bullets span li:hover{
-    background-color: var(--main-color);
-    border-color: var(--main-color);
-}
-@media (max-width: 767px){
-    .landing .bullets li{
-        width: 15px;
-        height: 15px;
-        margin-right: 5px;
-    }
 }
 .landing .bullets li.active{
     background-color: var(--main-color);
@@ -563,7 +537,7 @@ header nav .form i{
 .our-skills .testimonials .content img:hover{
     width: 120px;
     height: 120px;
-    transform: rotate(360deg) scale(1.1);
+    transform: scale(1.1);
 }
 @media (max-width: 767px){
     .our-skills .testimonials .content{
@@ -923,3 +897,18 @@ header nav .form i{
     color: var(--main-color);
 }
 /************************************ End Footer ****************************/
+/******************************* Start Animation *****************/
+@keyframes bouncing {
+    0%,
+    10%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(5px);
+    }
+    40%,
+    80% {
+        transform: translateY(15px)
+    }
+}
